workloads/canary-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canary
  labels: 
    sidecar.istio.io/inject: "true"
spec: {}
