workloads/canary-app/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: canary
spec:
  replicas: 10
  revisionHistoryLimit: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
  strategy:
    canary:
      analysis:
        startingStep: 2 # delay starting analysis run until setWeight: 30
        args:
        - name: service-name
          value: rollouts-demo-canary.canary.svc.cluster.local
        templates:
          - templateName: success-rate
      canaryService: rollouts-demo-canary
      stableService: rollouts-demo-stable
      trafficRouting:
        istio:
          virtualService:
            name: rollout-vsvc
            routes:
            - primary
      steps:
      - setWeight: 30
      - pause: { duration: 20s }
      - setWeight: 40
      - pause: { duration: 10s }
      - setWeight: 60
      - pause: { duration: 10s }
      - setWeight: 80
      - pause: { duration: 10s }
      - setWeight: 90
      - pause: { duration: 5s }
      - setWeight: 100
      - pause: { duration: 5s }
