workloads/canary-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rollouts-demo
  namespace: canary
spec:
  to:
    kind: Service
    name: rollouts-demo-stable
    weight: 100
  alternateBackends:
  - kind: Service
    name: rollouts-demo-canary
    weight: 0
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
